--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "version": "1.0.0",
   "author": "Alex Crocker <hello@crock.dev>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.6",
     "gatsby": "^2.13.51",
     "gatsby-image": "^2.2.8",
+    "gatsby-plugin-google-adsense": "^1.1.3",
+    "gatsby-plugin-google-analytics": "^2.1.19",
     "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-sitemap": "^2.2.16",
+    "gatsby-plugin-styled-components": "^3.1.8",
     "gatsby-source-filesystem": "^2.1.8",
     "gatsby-source-wordpress": "^3.1.14",
     "gatsby-transformer-sharp": "^2.2.5",
@@ -17,14 +22,16 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.0"
   },
   "devDependencies": {
     "gh-pages": "^2.1.1",
     "prettier": "^1.18.2"
   },
   "keywords": [
-    "gatsby", "wordpress"
+    "gatsby",
+    "wordpress"
   ],
   "license": "MIT",
   "scripts": {
